# vulkan-template

./: CMakeLists.txt  README.md  vulkan-template.sln
.cache/clangd/index/: App.cpp.360FAC6AADED8D27.idx  App.h.6869FD3D81007521.idx  _fixes.hpp.6753EDB18E26B7FE.idx  _vectorize.hpp.24AFD39563D95D9B.idx  common.hpp.4D27D7809A10A912.idx  compute_common.hpp.420C6F5E209874F1.idx  compute_vector_relational.hpp.42099F2C64A389E7.idx  constants.hpp.E03F58C8699B8150.idx  constants.inl.4EE7E597531E4334.idx  context.c.F96D5199D531A33F.idx  dual_quaternion.hpp.AE40F3E0FAC0403C.idx  dual_quaternion.inl.10E64E51AAA17CBD.idx  egl_context.c.82CE8C26A3AD03E2.idx  epsilon.hpp.56E1D343D09808F7.idx  epsilon.inl.D668EFA3B86B4D39.idx  exponential.hpp.9BBEDE100F8E9F5D.idx  func_common.inl.49C03707B8B0DD34.idx  func_exponential.inl.5619D428113294FD.idx  func_geometric.inl.2DA8911BB2B3910F.idx  func_integer.inl.55F59999E589F267.idx  func_matrix.inl.3670738E5544A2A3.idx  func_packing.inl.3434F12213372C7B.idx  func_trigonometric.inl.080842CDF32267A8.idx  func_vector_relational.inl.F7ECF9FAE60DC4B0.idx  fwd.hpp.591555F8DC1B8607.idx  geometric.hpp.1AFD113ABA707F9A.idx  glfw3.h.0A5C3C160C67CE0F.idx  glfw3native.h.F406B9F2A2E9EC65.idx  glm.cpp.4C5895D399A5A06D.idx  glm.hpp.DB71C814A0B1698F.idx  (+189 more)
VulkanTest/: App.cpp  App.h  HelloTriangleApplication.cpp  HelloTriangleApplication.h  Main.cpp  VulkanTest.vcxproj  VulkanTest.vcxproj.filters  compile.bat
randomLib/: CMakeLists.txt  randomLib.cpp  randomLib.h
shaders/: compile.bat
src/: App.cpp  App.h  CMakeLists.txt  main.cpp
